Working idiot solution for day 5 sample